# ProjectTemplates

SDL2/: CMakeLists.txt
SDL2/src/: main.cpp
SDL3/: CMakeLists.txt
SDL3/src/: main.cpp
